11712702-project2/test/test_11712702_2.out
Error type 4 at Line 5: function add is redefined
Error type 9 at Line 12: function add recieves wrong number of args 
Error type 8 at Line 12: incompatiable return type
