11712702-project2/test/test_11712702_2.spl
int add(){
    return 1;

}
char add(){
    return 'a';
}
int test_11712702_2()
{
  int i=0,j=0;
  i = j + 1;
  return add(i);
}
